--- a/styles/style.css
+++ b/styles/style.css
@@ -796,3 +796,66 @@ footer ul li {
     transform: translateY(-2000px);
   }
 }
+/*! Projects Page */
+#projects-select {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 90dvh;
+}
+.select-nav {
+  display: flex;
+  gap:50px;
+  list-style: none;
+}
+.select-nav li{
+  -webkit-box-reflect: below 0 linear-gradient(to bottom, transparent, rgba(255,255,255,0.7));
+  transition: .15s ease-out;
+}
+.select-nav li:hover {
+transform: scale(1.5);
+}
+#projects {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 100px;
+  padding: 100px;
+}
+.project-header {
+  font-size: 40px;
+  margin-bottom: 20px;
+}
+.project-description {
+  font-size: 20px;
+}
+.project {
+  display: flex;
+  width: 95%;
+  gap: 20px;
+}
+.project-info {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  height: 100%;
+}
+.project img {
+  width: 600px;
+  border-radius: 10px;
+}
+
+#web {
+  height: 300vh;
+}
+#react {
+  height: 100vh;
+}
+#python {
+  height: 300vh;
+}
+
+#unity {
+  height: 100vh;
+}
