--- a/styles/style.css
+++ b/styles/style.css
@@ -358,3 +358,29 @@ footer ul li {
 .go-up a {
   color: white;
 }
+
+/*! Contacts */
+#contact {
+  height: 100vh;
+  text-align: center;
+}
+.contact-card {
+height: 300px;
+}
+.contact-header {
+  font-size: 45px;
+  font-weight: 800;
+  -webkit-box-reflect: below 0px linear-gradient(to bottom, transparent, rgba(255,255,255,0.3));
+  margin-bottom: 75px;
+  margin-top: 25px;
+}
+.contact-interior a {
+  color: white;
+  text-decoration: none;
+  font-size: 30px;
+}
+.contact-list {
+  margin-top: 100px;
+  gap: 50px;
+  list-style-type: none;
+}
